# risc0-starter-newcircuit

methods/: Cargo.toml
methods/guest/: Cargo.toml  build.rs
project_or_component_name/: Cargo.toml
project_or_component_name/src/: main.rs
