[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = {git = "https://github.com/risc0/risc0.git", rev = "0622ee999402b8ae805e59ac3b19d0a2e2eb55ae"}

[dependencies]
risc0-zkvm = {git = "https://github.com/risc0/risc0.git", rev = "0622ee999402b8ae805e59ac3b19d0a2e2eb55ae"}
