[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = {git = "https://github.com/risc0/risc0.git"}

[dependencies]
risc0-zkvm = {git = "https://github.com/risc0/risc0.git"}
rbpf = {git = "https://github.com/dymchenkko/rbpf", rev = "b1bc15ad123a4e339450b06042ba8e08429e6943"}